# FoxVM

./: .gitignore  README.md  build.gradle  settings.gradle
core/: build.gradle
core/libfoxvm/: .gitignore  README.md  build.gradle
core/libfoxvm/src/android/java/dalvik/annotation/optimization/: FastNative.java
core/libfoxvm/src/android/java/libcore/io/: IoUtils.java
core/libfoxvm/src/android/java/libcore/util/: EmptyArray.java
core/libfoxvm/src/app/java/: TestMain.java
core/libfoxvm/src/main/java/java/io/: BufferedWriter.java  FilePermission.java  ObjectInputStream.java  ObjectStreamClass.java
core/libfoxvm/src/main/java/java/lang/: CharacterData00.java  CharacterData02.java  CharacterDataLatin1.java  Class.java  ClassLoader.java  Object.java  String.java  System.java  Thread.java  ThreadGroup.java
core/libfoxvm/src/main/java/java/lang/invoke/: SerializedLambda.java
core/libfoxvm/src/main/java/java/lang/reflect/: AccessibleObject.java  AnnotatedElement.java  Array.java  Constructor.java  Executable.java  Field.java  Method.java  Modifier.java  Parameter.java  Proxy.java  TypeVariable.java
core/libfoxvm/src/main/java/java/net/: SocketPermission.java
core/libfoxvm/src/main/java/java/nio/: Bits.java  ByteBufferAsCharBufferL.java  ByteBufferAsCharBufferRL.java  ByteBufferAsDoubleBufferB.java  ByteBufferAsDoubleBufferRB.java  ByteBufferAsDoubleBufferRL.java  ByteBufferAsFloatBufferB.java  ByteBufferAsFloatBufferL.java  ByteBufferAsFloatBufferRB.java  ByteBufferAsFloatBufferRL.java  ByteBufferAsIntBufferB.java  ByteBufferAsIntBufferL.java  ByteBufferAsIntBufferRB.java  ByteBufferAsIntBufferRL.java  ByteBufferAsLongBufferL.java  ByteBufferAsLongBufferRL.java  ByteBufferAsShortBufferB.java  ByteBufferAsShortBufferL.java  ByteBufferAsShortBufferRB.java  ByteBufferAsShortBufferRL.java  DirectByteBuffer.java  DirectByteBufferR.java  DirectCharBufferRS.java  DirectCharBufferRU.java  DirectCharBufferS.java  DirectCharBufferU.java  DirectDoubleBufferRS.java  DirectDoubleBufferRU.java  DirectDoubleBufferS.java  DirectDoubleBufferU.java  DirectFloatBufferRU.java  DirectFloatBufferS.java  DirectIntBufferRS.java  DirectIntBufferU.java  DirectLongBufferRS.java  DirectLongBufferS.java  DirectLongBufferU.java  DirectShortBufferRS.java  DirectShortBufferRU.java  DirectShortBufferS.java  (+11 more)
core/libfoxvm/src/main/java/java/nio/charset/: Charset.java
core/libfoxvm/src/main/java/java/security/: AccessController.java  AuthProvider.java  CodeSource.java  Permission.java  Policy.java  SecurityPermission.java  UnresolvedPermission.java
core/libfoxvm/src/main/java/java/security/acl/: Permission.java
core/libfoxvm/src/main/java/java/util/: ArrayDeque.java  ArrayList.java  ArraysParallelSortHelpers.java  Collections.java  HashMap.java  HashSet.java  Hashtable.java  IdentityHashMap.java  Properties.java
core/libfoxvm/src/main/java/java/util/concurrent/: CopyOnWriteArrayList.java
core/libfoxvm/src/main/java/java/util/jar/: Pack200.java
core/libfoxvm/src/main/java/javax/crypto/: Cipher.java  CryptoAllPermission.java  CryptoPermission.java  CryptoPermissions.java  CryptoPolicyParser.java  JceSecurity.java  JceSecurityManager.java  SealedObject.java
core/libfoxvm/src/main/java/jdk/net/: NetworkPermission.java
core/libfoxvm/src/main/java/sun/misc/: JavaLangAccess.java  SharedSecrets.java  URLClassPath.java  Unsafe.java  VM.java  Version.java
core/libfoxvm/src/main/java/sun/reflect/: Reflection.java
core/libfoxvm/src/oj/java/lang/: CharacterData01.java  CharacterData0E.java  SecurityManager.java  System.java
core/libfoxvm/src/oj/java/nio/: ByteBufferAsCharBufferB.java  ByteBufferAsCharBufferRB.java  ByteBufferAsDoubleBufferL.java  ByteBufferAsLongBufferB.java  ByteBufferAsLongBufferRB.java  DirectFloatBufferRS.java  DirectFloatBufferU.java  DirectIntBufferRU.java  DirectIntBufferS.java  DirectLongBufferRU.java  HeapCharBuffer.java  HeapDoubleBuffer.java  HeapLongBuffer.java  HeapShortBufferR.java
core/libfoxvm/src/oj/java/security/: AccessControlContext.java  AllPermission.java  BasicPermission.java  PermissionCollection.java  Permissions.java  PrivilegedAction.java  ProtectionDomain.java
core/libfoxvm/src/solaris/java/sun/net/: NetHooks.java
core/translator/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  main.c
native/cmake/: FindCTargets.cmake  configure.cmake
native/runtime/: CMakeLists.txt  config.h.in  configure.cmake  vm_array.c  vm_base.c  vm_bytecode.c  vm_class.c  vm_exception.c  vm_field.c  vm_main.c  vm_memory.c  vm_method.c  vm_monitor.c  vm_primitive.c  vm_reflection.c  vm_stack.c  vm_string.c
native/runtime/3rd/: CMakeLists.txt
native/runtime/3rd/opa/: CMakeLists.txt
native/runtime/3rd/opa/include/primitives/: opa_nt_intrinsics.h
native/runtime/classloader/: vm_boot_classloader.c  vm_boot_classloader.h  vm_classloader.c
native/runtime/include/: vm_array.h  vm_base.h  vm_bytecode.h  vm_class.h  vm_classloader.h  vm_exception.h  vm_field.h  vm_gc.h  vm_gc_old.h  vm_gc_priv.h  vm_main.h  vm_memory.h  vm_memory_base.h  vm_method.h  vm_monitor.h  vm_native.h  vm_primitive.h  vm_reference.h  vm_reflection.h  vm_stack.h  vm_string.h  vm_thread.h  vm_tlab.h
native/runtime/include/c11/: threads.h  threads_posix.h  threads_win32.h
native/runtime/memory/: vm_gc.c  vm_gc_old.c  vm_gc_priv.c  vm_memory.c  vm_memory_posix.c  vm_memory_win32.c  vm_reference.c  vm_tlab.c
native/runtime/native/: vm_native.c  vm_native_posix.c
native/runtime/opa/: CMakeLists.txt  opa_config.h.in
native/runtime/opa/cmake/: configure.cmake
native/runtime/rt_core/: CMakeLists.txt  java_lang_Class.c  java_lang_Double.c  java_lang_Float.c  java_lang_Object.c  java_lang_System.c  java_lang_Thread.c  java_lang_Throwable.c  java_lang_reflect_Array.c  java_lang_reflect_Constructor.c  sun_misc_Unsafe.c  sun_reflect_Reflection.c
native/runtime/rt_core/posix/: java_io_FileDescriptor.c  java_io_FileDescriptor.h  java_io_FileOutputStream.c
native/runtime/thread/: vm_thread.c  vm_thread_posix.c  vm_thread_win32.c
(+58 files in other folders)
